<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPage">

    <TextView
        android:id="@+id/searchPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <SearchView
        android:id="@+id/searchFor"
        style="@android:style/Widget.Material.SearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_button"
        android:backgroundTint="?attr/colorAccent"
        android:gravity="start"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint='Search for...'
        app:layout_constraintEnd_toStartOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPageTitle" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/go"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFor" />

    <LinearLayout
        android:id="@+id/Navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="39dip"
            android:layout_height="37dip"
            android:layout_marginEnd="60dip"
            android:background="@drawable/ic_home"
            android:backgroundTint="@color/colorButtonsLightMode"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/searchButton2"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginEnd="60dip"
            android:layout_weight="0"
            android:background="@drawable/ic_search_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_weight="0"
            android:background="@drawable/ic_settings_black_24dp"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <Button
        android:id="@+id/filter"
        android:layout_width="55dip"
        android:layout_height="55dip"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchFor"
        app:layout_constraintTop_toBottomOf="@+id/searchPageTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/popular_subjects"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/popularSearchesView"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/popularSearchesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/Navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentSearchesView">

        <LinearLayout
            android:id="@+id/popularSearches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <requestFocus/>
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/recent"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/recentSearchesView"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/recentSearchesView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/popularSearchesView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <LinearLayout
            android:id="@+id/recentSearches"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <Button
        android:id="@+id/deleteRecentSearches"
        android:layout_width="25dip"
        android:layout_height="25dip"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ic_delete"
        app:layout_constraintBottom_toTopOf="@id/recentSearchesView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>